Update Stock Sheets and Panel API created and Updates done in Table

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -76,4 +76,7 @@
   .hide-scrollbar::-webkit-scrollbar {
     @apply hidden;
   }
+  .overflowing {
+    @apply whitespace-nowrap overflow-hidden text-ellipsis;
+  }
 }
